kubernetes-deployment/todofehristapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todofehristapi-service
spec:
  type: NodePort
  selector:
    app: todofehristapi
  ports:
  - name: todofehristapi-port
    protocol: TCP
    port: 8080
    targetPort: 8000
