kubernetes-deployment/todofehrist-ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todofehrist-ingress-gke
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: todofehristapi-service
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: todofehristapi-service
            port:
              number: 8080
