kubernetes-deployment/todofehrist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emumba-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: todofehristapi-service
      port:
        number: 8080
  rules:
  - host: kubernetes.todofehrist.api
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todofehristapi-service
            port:
              number: 8080
  tls:
  - hosts:
    - kubernetes.todofehrist.api
  - secretName: minikube-ingress-secret
